[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Abinav Ramesh", email = "42865635+abinavrameshs@users.noreply.github.com"},
]
dependencies = [
    "qrcode",
    "Pillow",
    "protobuf==3.19.4",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"


[tool]
[tool.pdm]
